feat(manager): remove V1 Preheat API and related components
